# zb-migrate

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-TW.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  migrate.rs
