[package]
name = "zb-migrate"
version = "0.1.7"
edition = "2021"
description = "Migrate from Homebrew to Zerobrew"
license = "MIT"
repository = "https://github.com/yuskang/zb-migrate"
readme = "README.md"
keywords = ["homebrew", "zerobrew", "macos", "package-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "zb-migrate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
